ex.css
.wasteof.page {
    padding: 20px 0;
    gap: 0;
}

.post {
    padding: 12px 12px 8px 12px;
    display: flex;
    gap: 8px;
    border-top: 2px solid var(--app-300);
    border-bottom: 2px solid var(--app-300);
    overflow: hidden;

    transition: opacity 0.2s ease-out;
    opacity: 1;
}

.hidden.post {
    opacity: 0;
}

.post-skeleton {
    padding: 12px 12px;
    display: flex;
    gap: 8px;
    border-top: 2px solid var(--app-500);
    border-bottom: 2px solid var(--app-500);
}

.repost {
    padding: 6px 6px;
    display: flex;
    gap: 8px;
}

.repost .pfp-container {
    padding: 2px 0;
}

.post:not(:last-child),
.post-skeleton:not(:last-child) {
    border-bottom: none;
}

.post-header {
    display: flex;
    gap: 5px;
    font-weight: 500;
    align-items: baseline;
}

.post-title {
    font-size: 1.1rem;
}

.repost .post-title {
    font-size: 1rem;
}

.post-date {
    opacity: 0.8;
    font-size: 0.8rem;
    font-weight: 400;
}

.post-content {
    display: flex;
    flex-direction: column;
    gap: 5px;
}

.post-content>p,
.post-content>span,
.post-content>blockquote>p,
.post-content li {
    font-size: 0.9em;
    line-height: 1.3;
}

.post-content>p:first-child {
    margin-top: -4px;
}

.post-content>p,
.post-content>span,
.post-content>blockquote>p,
.post-content>h1,
.post-content>h2,
.post-content>h3,
.post-content>h4,
.post-content>h5,
.post-content>h6,
.post-content li {
    margin: 0;
}

.post-content li {
    word-wrap: normal;
}

.post-content>img {
    border-radius: 8px;
    max-height: 400px;
    object-fit: cover;
    border: 1px solid #ffffff25;
    box-sizing: border-box;
}

.post-page .post-content>img {
    max-height: 100%;
}   

.pfp {
    background-image: var(--image);
    background-size: cover;
    background-position: center;
    width: 40px;
    height: 40px;
    box-shadow: inset 0 0 0 1px #ffffff25;
    border-radius: 100px;
}

.skeleton.pfp {
    background-image: none;
    background-color: #ffffff25;
}

.pfp:active {
    opacity: 0.8;
}

.repost .pfp {
    width: 20px;
    height: 20px;
    align-self: center;
}

.post-container {
    display: flex;
    flex-direction: column;
    gap: 4px;
    flex-grow: 1;
    overflow: hidden;
    text-wrap: wrap;
}

.end {
    display: flex;
    justify-content: center;
    align-items: center;
    padding-top: 0.5rem;
    padding-bottom: 1rem;
    opacity: 0.8;
}

.post-info {
    display: flex;
    gap: 20px;
    padding: 4px;
}

.post-skeleton .post-info {
    opacity: 0.5;
}

.post-info-item {
    display: flex;
    gap: 5px;
    align-items: flex-end;
    font-weight: 600;
    position: relative;
    z-index: 0;
    padding: 4px;
}

.post-info-item::before {
    content: '';
    position: absolute;
    top: -1px;
    left: -4px;
    width: 100%;
    height: 100%;
    background-color: transparent;
    z-index: -1;
    padding: 2px 4px;
    border-radius: 8px;
    -webkit-user-select: none;
    user-select: none;
    transform: scale(0.85);
    transition: background-color 0.15s ease-in-out, transform 0.15s ease-in-out;
}

.post-info-item:active::before {
    transform: scale(1);
    background-color: var(--app-200);
}

.post-info-item>.icon {
    display: flex;
    justify-content: center;
    align-items: center;
}

.post-info-item>.icon>svg {
    width: 20px;
    height: 20px;
}

.count {
    font-size: 0.8rem;
}

.love {
    fill: none;
    stroke: currentColor;
}

.loved .love {
    color: var(--app-red);
    fill: currentColor;
    stroke: currentColor;
}

.banner {
    height: calc(150px + env(safe-area-inset-top));
    margin-bottom: -10%;
    width: 100%;
}

.banner img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.profile-info {
    padding: 0.25rem 0.5rem;
    display: flex;
    justify-content: space-between;
}

.profile-info .date,
.profile-info .stats {
    font-size: 0.9rem;
    font-style: italic;
    opacity: 0.75;
    text-align: right;
}

.profile-info.more {
    display: flex;
}

.profile-info.bottom {
    padding-bottom: 8px;
}

.profile-section {
    display: flex;
    flex-direction: column;
}

.profile-section.right {
    align-items: flex-end;
}

.profile-picture {
    width: 8rem;
    height: 8rem;
    border-radius: 100px;
    margin-right: 1rem;
    box-sizing: border-box;
    border: 5px solid var(--app-100);
    background-color: var(--app-100);
    display: block;
}

.profile-name .username {
    font-size: 1.4rem;
    font-weight: 600;
}

.profile-page {
    padding: 0;
    padding-bottom: calc(var(--nav-height) + env(safe-area-inset-bottom));
    display: flex;
    flex-direction: column;
    gap: 0;
    margin-bottom: 8px;
}

#bio {
  line-height: 1.2;
}

.postbox {
    height: 100%;
    /* width: 100%; */
    background: var(--app-600);
    border: 2px solid var(--app-700);
    border-radius: 12px;

    font-size: 1rem;
    font-family: 'GG Sans';
    color: var(--app-text);
    padding: 10px;
}

.postbox {
    padding: 0;
    background: transparent;
    border: none;
}

.skeleton-text {
    height: 1lh;
    background-color: #ffffff25;
    border-radius: 100px;
    display: block;
}

.post-skeleton .post-header {
    margin-bottom: 2px;
}

.modal-button {
    /* border: 2px solid var(--app-700); */
}

.modal-button.highlight {
    background: var(--app-blue);
    color: var(--app-white);
    /* border: 2px solid #70a3ff; */

    font-weight: 600;
    text-shadow: 0 0 10px #00000050;
}

.modal-button.highlight:active {
    background: var(--app-dark-blue);
    /* border: 2px solid #70a3ff; */
}

.newpost-outer {
    display: flex;
    gap: 10px;
    height: 100%;
    padding: 30px 4px;
}

.newpost-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.newpost-container {
    display: flex;
    width: 100%;
    flex-direction: column;
    gap: 4px;
}
/* ... */

